# frankenfont

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/frankenfont/: __init__.py  cli.py  create.py  fontforge_create.py  preview.py
tests/: test_cli.py  test_config.json  test_config.toml  test_create.py  test_fontforge_create.py  test_init.py  test_preview.py
