[project]
name = "frankenfont"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fonttools>=4.54.1",
    "pillow>=11.0.0",
    "toml>=0.10.2",
]

[project.scripts]
hello = "frankenfont:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "pyupgrade>=3.19.0",
    "ruff>=0.7.1",
]
